{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 36,
  "lineage": "69fd3531-7708-85ae-2deb-eaed9ba362d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_Ubuntu_LabFinal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aa3f7caf3a30282",
            "arn": "arn:aws:ec2:us-east-1:730806271232:instance/i-08a4577ee5a5e47cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a4577ee5a5e47cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-LabITM-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09176cdeec2c493c5",
            "private_dns": "ip-172-30-0-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.30.0.186",
            "public_dns": "ec2-52-1-101-44.compute-1.amazonaws.com",
            "public_ip": "52.1.101.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f0a5b2336219dc82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0505555d06b3b2c82"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4d383aebd536b34",
            "tags": {
              "Name": "Ubuntu Linux ITMLabFinal"
            },
            "tags_all": {
              "Name": "Ubuntu Linux ITMLabFinal"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0505555d06b3b2c82"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_ITMLabFinal",
            "aws_subnet.SUBNET_LaboratorioFinal_1",
            "aws_vpc.VPCLabFinalITM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG_ITMLabFinal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730806271232:internet-gateway/igw-012a472cda2fb796a",
            "id": "igw-012a472cda2fb796a",
            "owner_id": "730806271232",
            "vpc_id": "vpc-078748bfc16ca425c"
          },
          "dependencies": [
            "aws_vpc.VPCLabFinalITM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "RT_AssociationJoomla",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013641cd6369ffc4a",
            "original_route_table_id": "rtb-01673783e3a6f3d6d",
            "route_table_id": "rtb-0d25251f59123acab",
            "vpc_id": "vpc-078748bfc16ca425c"
          },
          "dependencies": [
            "aws_internet_gateway.IG_ITMLabFinal",
            "aws_route_table.RT_ITMLabFinal",
            "aws_vpc.VPCLabFinalITM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_ITMLabFinal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730806271232:route-table/rtb-0d25251f59123acab",
            "id": "rtb-0d25251f59123acab",
            "owner_id": "730806271232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012a472cda2fb796a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078748bfc16ca425c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG_ITMLabFinal",
            "aws_vpc.VPCLabFinalITM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_ITMLabFinal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730806271232:security-group/sg-0505555d06b3b2c82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0505555d06b3b2c82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG_ITMLabFinal",
            "name_prefix": "",
            "owner_id": "730806271232",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078748bfc16ca425c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCLabFinalITM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNET_LaboratorioFinal_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730806271232:subnet/subnet-0c4d383aebd536b34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.30.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4d383aebd536b34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730806271232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "LAB",
              "Name": "SUBNET_LaboratorioFinal_1"
            },
            "tags_all": {
              "Env": "LAB",
              "Name": "SUBNET_LaboratorioFinal_1"
            },
            "vpc_id": "vpc-078748bfc16ca425c"
          },
          "dependencies": [
            "aws_vpc.VPCLabFinalITM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNET_LaboratorioFinal_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730806271232:subnet/subnet-020c1215bd09e887c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c1215bd09e887c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730806271232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "LAB",
              "Name": "SUBNET_LaboratorioFinal_2"
            },
            "tags_all": {
              "Env": "LAB",
              "Name": "SUBNET_LaboratorioFinal_2"
            },
            "vpc_id": "vpc-078748bfc16ca425c"
          },
          "dependencies": [
            "aws_vpc.VPCLabFinalITM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCLabFinalITM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730806271232:vpc/vpc-078748bfc16ca425c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0ed6caf165c45d913",
            "default_route_table_id": "rtb-01673783e3a6f3d6d",
            "default_security_group_id": "sg-0cd818a13961225f8",
            "dhcp_options_id": "dopt-0e3ed4d17dc8ae7a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078748bfc16ca425c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01673783e3a6f3d6d",
            "owner_id": "730806271232",
            "tags": {
              "name": "VPCLabFinalITM"
            },
            "tags_all": {
              "name": "VPCLabFinalITM"
            }
          }
        }
      ]
    }
  ]
}